add the description and alt and some

--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+    name="description"
+    content="Contact croissant.com to learn more about our homemade croissants"
+  />
     <title>Contact</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <p>
       Hello, If you wanna know about the recipe of Croissant. Just contact us
-      <a href="mailto:hello@croissant.com" class="contact-link"
+      <a href="mailto:hello@croissant.com" title="contact us by email" class="contact-link"
         >hello@croissant.com</a
       >
     </h1>
     <div class="link"></div>
     <div class="link">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">See photo of croissant</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="photo.html " title="Croissant photo">See photo of croissant</a>
+      <a href="contact.html" title="Contact Croissant.com">Contact Us</a>
     </div>
   </body>
 </html>
