--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Taste the best croissant in town" />
     <title>Croissant</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
@@ -14,9 +15,9 @@
       dough.
     </p>
     <div class="link">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">See photo of croissant</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="photo.html " title="Croissant photo">See photo of croissant</a>
+      <a href="contact.html" title="Contact Croissant.com">Contact Us</a>
     </div>
   </body>
 </html>
