--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Enjoy a beautiful picture of a homemade croissant"
+    />
     <title>Photo of Croissant</title>
 
     <link
@@ -17,13 +21,13 @@
     <h1>This is Croissant</h1>
     <img
       src="https://c4.wallpaperflare.com/wallpaper/230/985/188/assortment-bake-bakery-bread-wallpaper-preview.jpg"
-      alt=""
+      alt="croissant photo"
       class="img-fluid"
     />
     <div class="link">
-      <a href="index.html">Homepage</a>
-      <a href="photo.html">See photo of croissant</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="photo.html " title="Croissant photo">See photo of croissant</a>
+      <a href="contact.html" title="Contact Croissant.com">Contact Us</a>
     </div>
   </body>
 </html>
